--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -8,7 +8,7 @@
 <form action="{{ site.simple_search }}" method="get">
   <fieldset role="search">
     <input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}" />
-    <input class="search" type="text" name="q" results="0" placeholder="搜索：输入内容后敲回车"/>
+    <input class="search" type="text" name="q" results="0" placeholder="搜索 = 输入 + 回车"/>
   </fieldset>
 </form>
   {% endif %}
