--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -23,7 +23,7 @@ body > header h1 {
   margin-bottom: 0.6667em;
 }
 body > header h2 {
-  font-family: $header-subtitle-font-family;
+  font-family: "PT Serif", "Georgia", "Helvetica Neue", Arial, sans-serif ;
 }
 
 body {
