--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -2,9 +2,9 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works. your sites's.
 // If you love to use Web Fonts, you also need to add some lines to source/_includes/custom/head.html
 
-//$sans: "Verdana", "STHeitiSC", "Microsoft YaHei",  "Optima", sans-serif;
+$sans: "Verdana", "STXihei", "华文细黑", "STHeitiSC", "华文黑体", "Microsoft YaHei",  "Optima", sans-serif;
 //$serif: "Georgia", "Baskerville", serif;
 //$mono: "Courier", monospace;
-//$heading-font-family: "Verdana", "STHeitiSC", "Microsoft YaHei", sans-serif;
-//$header-title-font-family: "Verdana", "STHeitiSC", "Microsoft YaHei", "Futura", sans-serif;
+$heading-font-family: "Verdana", "STHeitiSC", "华文黑体", "Microsoft YaHei", "微软雅黑", sans-serif;
+$header-title-font-family: "Verdana", "STHeitiSC", "华文黑体", "Microsoft YaHei", "微软雅黑", "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
