--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -35,7 +35,6 @@
   <script type="text/javascript"
      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
-  <script src="{{root_url}}/javascripts/footnote.js"></script>
 
 <!--新窗口中打开链接-->
 <script type="text/javascript">
@@ -47,8 +46,14 @@ function addBlankTargetForLinks () {
 $(document).bind('DOMNodeInserted', function(event) {
   addBlankTargetForLinks();
 });
-
 </script>
 
 <!--adn timeline-->
 <script type="text/javascript" src="{{ root_url }}/javascripts/adn-timeline.min.js"></script>
+
+<!--bigfoot-->
+<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="js/bigfoot.js"></script>
+<script type="text/javascript">
+    $.bigfoot();
+</script>
