--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -51,3 +51,11 @@ $(document).bind('DOMNodeInserted', function(event) {
 <!--adn timeline-->
 <script type="text/javascript" src="{{ root_url }}/javascripts/adn-timeline.min.js"></script>
 
+<!--bigfoot-->
+<style>@import url("/stylesheets/bigfoot-number.scss");</style>
+<script type="text/javascript" src="{{ root_url }}/javascripts/libs/jquery.min.js"></script>
+<script type="text/javascript" src="{{ root_url }}/javascripts/bigfoot.js"></script>
+<script type="text/javascript">
+    $.bigfoot();
+</script>
+
