--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,7 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">首页</a></li>
   <li><a href="{{ root_url }}/blog/archives">文章列表</a></li>
+  <li><a href="{{ root_url }}/ebauche">Ébauche</a></li>
+  <li><a href="{{ root_url }}/mac-app-papers">用 Mac 搞学术</a></li>
   <li><a href="http://haohailong.net">另一面</a></li>
 </ul>
