--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -10,7 +10,33 @@ body > header h1 {
   margin-bottom: 0.6667em;
 }
 */
+
 h1 {
   font-size: 2.2em;
   line-height: 1.2em;
+}
+
+/* 提示框样式 */
+
+.info, .warning{
+
+	border:none;
+	padding:0.6em 1.25em 0.6em 48px;
+	margin-top:0.25em;
+
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+	
+	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+	-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+}
+
+.info{
+	background:#d5e9f6 url(/images/tab_info.gif) no-repeat left top;
+}
+
+.warning{
+	background:#f9d9d8 url(/images/tab_red.gif) no-repeat left top;
 }
