--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -23,6 +23,9 @@ h1 {
 	border:none;
 	padding:0.6em 1.25em 0.6em 48px;
 	margin-top:0.25em;
+	
+	font-style: normal;
+	font-size: 0.75em;
 
 	-webkit-border-radius: 8px;
 	-moz-border-radius: 8px;
