--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -19,10 +19,10 @@ h1 {
 /* 提示框样式 */
 
 .info, .warning{
-
 	border: none;
-	padding: 0.6em 1.25em  0.2em 48px;
+	padding: 0.6em 1.25em 0.4em 48px;
 	margin-top: 0.25em;
+	margin-top: 0.25em;	
 	
 	font-style: normal;
 	font-size: 1em;
