--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -50,12 +50,14 @@ h1 {
 	font-family: $sans;
 	line-height: 2em;
 }
+
 ul#markdown-toc {
   	list-style: none;
 	border: none;
 	padding: 0.6em 1.25em;
 	margin-top: 0.25em;
-	margin-top: 0.25em;	
+	margin-top: 0.25em;
+	margin-left: 0;	
 	font-style: normal;
 	font-size: 1em;
 
