--- a/source/_includes/archive_post.html
+++ b/source/_includes/archive_post.html
@@ -1,6 +1,6 @@
 {% capture category %}{{ post.categories | size }}{% endcapture %}
 <h1><a href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
-<time datetime="{{ post.date | datetime | date_to_xmlschema }}" pubdate>{{ post.date | date: "<span class='month'>%-m月</span><span class='day'>%d日</span> <span class='year'>%Y</span>"}}</time>
+<time datetime="{{ post.date | datetime | date_to_xmlschema }}" pubdate>{{ post.date | date: "<span class='month'>%-m月</span><span class='day'>%e日</span> <span class='year'>%Y</span>"}}</time>
 {% if category != '0' %}
 <footer>
   <span class="categories">分类： {{ post.categories | category_links }}</span>
