fix gist display bug

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -72,4 +72,13 @@ ul#markdown-toc {
   	display: none;
 }
 
+/* fix gist display bug*/
+.gist-file {
+  font-size:.8em !important;
+}
+
+table.lines{
+  width: 100%;
+}
+
 
