--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -72,4 +72,17 @@ ul#markdown-toc {
   	display: none;
 }
 
+/* Coderay */
+/* overrides of the lousy styles from _syntax.scss */
+.CodeRay pre {
+  background: none;
+  color: #000;
+}
+
+/* fixes issue where the whole line wouldn't get colored in a diff */
+.CodeRay span.insert, .CodeRay span.change, .CodeRay span.delete {
+        width: auto;
+}
+@import "custom/coderay";
+
 
