--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -25,6 +25,7 @@ single: true
     </p>
   </footer>
 </article>
+{% include revision.html %}
 {% if site.disqus_short_name and page.comments == true %}
   <section>
     <h2>本文评论</h2>
