--- a/source/_includes/revision.html
+++ b/source/_includes/revision.html
@@ -1,4 +1,4 @@
-<section>
+<section class="post revision">
   <h2>  修订信息 </h2>
-  {% revision limit:5 %}<br />
+  {% revision limit:5 %}
 </section>
