--- a/source/_includes/revision.html
+++ b/source/_includes/revision.html
@@ -1,4 +1,4 @@
 <section class="postrevision">
-  <h2>  修订信息 </h2>
-  {% revision limit:5 %}
+	<h3>  本文版本信息 </h3>
+	{% revision limit:5 %}
 </section>
