--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -110,9 +110,9 @@ ul#markdown-toc {
 	-moz-border-radius: 8px;
 	border-radius: 8px;
 
-	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-	-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+	//-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+	//-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+	//-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
   	background-color: white;
 }
 
