add copyright statement

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} - <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"> -  署名 -  非商业 - 非衍生 -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>, Customized by <a href="http://haohailong.net/" target="_blank">Haohailong.net</a></span>
 </p>
