hyperlink style for sidebar

--- a/sass/partials/sidebar/_base.scss
+++ b/sass/partials/sidebar/_base.scss
@@ -41,7 +41,7 @@ aside.sidebar {
     }
   }
   a {
-    color: inherit;
+    color: inherit; text-decoration: none;
     @include transition(color .5s);
   }
   &:hover a {
