re deploy font awesome

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -116,3 +116,7 @@ ul#markdown-toc {
   	background-color: white;
 }
 
+/* font awesome */
+$fontAwesomePath: "fontawesome-webfont"
+@import font-awesome
+
