--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -118,5 +118,5 @@ ul#markdown-toc {
 
 /* font awesome */
 $fontAwesomePath: "fontawesome-webfont"
-@import font-awesome
+@import "custom/font-awesome"
 
