--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -116,7 +116,5 @@ ul#markdown-toc {
   	background-color: white;
 }
 
-/* font awesome */
-$fontAwesomePath: "fontawesome-webfont"
-@import "font-awesome"
+@import "font-awesome";
 
