--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -9,4 +9,4 @@
 @import "plugins/**/*";
 @import "custom/styles";
 
-@import "font-awesome/scss/font-awesome.scss";
+@import "font-awesome/scss/_font-awesome";
