--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -115,3 +115,22 @@ ul#markdown-toc {
 	//-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
   	background-color: white;
 }
+
+
+/*!
+ *  Font Awesome 4.0.3 by @davegandy - http://fontawesome.io - @fontawesome
+ *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ */
+
+@import "fa-scss/variables";
+@import "fa-scss/mixins";
+@import "fa-scss/path";
+@import "fa-scss/core";
+@import "fa-scss/larger";
+@import "fa-scss/fixed-width";
+@import "fa-scss/list";
+@import "fa-scss/bordered-pulled";
+@import "fa-scss/spinning";
+@import "fa-scss/rotated-flipped";
+@import "fa-scss/stacked";
+@import "fa-scss/icons";
