add some icons and about widget

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -134,3 +134,14 @@ ul#markdown-toc {
 @import "fa-scss/rotated-flipped";
 @import "fa-scss/stacked";
 @import "fa-scss/icons";
+
+
+
+/* sidebar social media for about aside*/
+
+.sideabout {
+	text-align: center;
+	margin-top: -2em;
+	//margin-bottom: -2em;
+}
+
