--- a/source/_includes/asides/about.html
+++ b/source/_includes/asides/about.html
@@ -11,7 +11,7 @@
   <i class="fa fa-facebook-square fa-2x"></i></a></th>
       <th><a href="https://itunes.apple.com/cn/podcast/hai-long-yi-sheng-hou/id603056780" target="_blank" title="My Podcast: 海龙一声吼">
   <i class="fa fa-headphones fa-2x"></i></a></th>
-      <th><a href="http://s.olo.la/1ryF" target="_blank" title="Hailong Hao's Bitcoin Address 郝海龙的比特币收款地址">
-  <i class="fa fa-btc fa-2x"></i></a></th></tr>
+      <th><a href="{{ root_url }}/about/buy-me-coffee.html" target="_blank" title="请郝海龙喝咖啡">
+  <i class="fa fa-coffee fa-2x"></i></a></th></tr>
 </table></p>
 </section>
