redesign about sidebar

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -140,8 +140,8 @@ ul#markdown-toc {
 /* sidebar social media for about aside*/
 
 .sideabout {
-	text-align: center;
-	margin-top: -2em;
+	text-align: justify;
+	margin-top: 0em;
 	//margin-bottom: -2em;
 }
 
