--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -12,8 +12,9 @@ $main-bg: #f8f8f8 !default;
 $page-bg: #252525 !default;
 $article-border: #eeeeee !default;
 
-$header-bg: #333 !default;
-$header-border: lighten($header-bg, 15) !default;
+$header-bg: transparent !default; /*此行为新添代码，实现网站标题背景透明，取代下两行*/
+//$header-bg: #333 !default; 
+//$header-border: lighten($header-bg, 15) !default;
 $title-color: #f2f2f2 !default;
 $subtitle-color: #aaa !default;
 
