调整 adn 页面格式

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -240,3 +240,11 @@ ul#markdown-toc {
 .proxy-container {
     position: absolute;
 }
+
+
+//adn ul
+.ul-adn{
+	list-style:none;
+	margin:0px;
+	padding:0px;
+}
