--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -21,14 +21,14 @@ body > header h1 {
   width: 95%;
   @include border-radius(.3em);
   @include background-clip(padding-box);
-  //@include box-shadow(lighten($nav-bg, 2) 0 1px);
+  //box-shadow: lighten($nav-bg, 2) 0 1px;
   background-color: ($nav-bg, 15);
   border: 1px solid $nav-border;
   color: #888;
   &:focus {
     color: #444;
     border-color: #80b1df;
-    @include box-shadow(#80b1df 0 0 4px, #80b1df 0 0 3px inset);
+    box-shadow: #80b1df 0 0 4px, #80b1df 0 0 3px inset;
     background-color: #fff;
     outline: none;
   }
@@ -60,7 +60,7 @@ ul, ol {margin-bottom: 0.6em;}
 	
 	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-	-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 }
 
 .info{
@@ -95,7 +95,7 @@ ul#markdown-toc {
 
 	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-	-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
   	background-color: white;
 }
 
