--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -72,7 +72,7 @@ a {
 }
 
 html {
-  background: #333333; //$page-bg image-url('line-tile.png') top left;
+  background: #111111; //#222222; //$page-bg image-url('line-tile.png') top left;
 }
 body {
   > div {
