change toc box color

--- a/sass/custom/_borders.scss
+++ b/sass/custom/_borders.scss
@@ -72,7 +72,7 @@
 }
 
 .borderpurple {
-	background: #9999ff;
+	background: #e3b3e3;
 }
 
 .borderdreamblue {
@@ -167,7 +167,7 @@ ul#markdown-toc {
 	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-  	background-color: #D3D3D3;
+  	background-color: #e3b3e3; //#D3D3D3;
 }
 
 .blog-index #markdown-toc {
