修改版本信息标题

--- a/sass/custom/_borders.scss
+++ b/sass/custom/_borders.scss
@@ -90,7 +90,7 @@
 /* post revision */
 
 .postrevision:before {
-  	content: "本文版本信息";
+  	content: "最近修改记录";
   	font-weight: bold;
 	font-size: 1.2em;
 	font-family: $sans;
