修改目录样式

--- a/sass/custom/_borders.scss
+++ b/sass/custom/_borders.scss
@@ -72,7 +72,7 @@
 }
 
 .borderpurple {
-	background: #e3b3e3;
+	background: #ebc9eb;
 }
 
 .borderdreamblue {
@@ -167,7 +167,7 @@ ul#markdown-toc {
 	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-  	background-color: #e3b3e3; //#D3D3D3;
+  	background-color: #ebc9eb; //#D3D3D3;
 }
 
 .blog-index #markdown-toc {
@@ -177,7 +177,7 @@ ul#markdown-toc {
 /* post revision */
 
 .postrevision:before {
-  	content: "本文版本信息";
+  	content: "本文最近修改记录";
   	font-weight: bold;
 	font-size: 1.2em;
 	font-family: $sans;
