修改样式表二级标题的行高

--- a/sass/custom/_borders.scss
+++ b/sass/custom/_borders.scss
@@ -159,6 +159,7 @@ ul#markdown-toc {
 	margin-left: 0;	
 	font-style: normal;
 	font-size: 1em;
+	line-height: 1.75em;
 
 	-webkit-border-radius: 8px;
 	-moz-border-radius: 8px;
