--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -10,6 +10,11 @@ body > header h1 {
   margin-bottom: 0.6667em;
 }
 */
+
+h2 {
+  line-height: 1.2em;
+}
+
 .sidebar {
 .search {
   padding: 0.2em;
