--- a/sass/custom/_borders.scss
+++ b/sass/custom/_borders.scss
@@ -114,7 +114,7 @@
 	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-  	background-color: white;
+  	background-color: #d3d3d3;
 }
 
 /* 提示框样式 */
@@ -168,7 +168,7 @@ ul#markdown-toc {
 	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-  	background-color: #ebc9eb; //#D3D3D3;
+  	background-color: #D3D3D3;
 	a:link {
 		text-decoration: none; 
 		color: lighten(#165b94, 3);
