update head and index

--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,5 @@
+<!-- ask Google to include this site -->
+<link rel="canonical" href="http://shengmingzhiqing.com">
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="//fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="//fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
@@ -5,7 +7,7 @@
 <link href="//fonts.googleapis.com/css?family=Marko+One:regular" rel="stylesheet" type="text/css">
 
 <!-- adn app.net-->
-<script type="text/javascript" src="{{ root_url }}/javascripts/adn-timeline.min.js"></script>
+<!--script type="text/javascript" src="{{ root_url }}/javascripts/adn-timeline.min.js"></script>-->
 
 <!-- mathjax config similar to math.stackexchange -->
 
@@ -58,4 +60,3 @@ $(document).bind('DOMNodeInserted', function(event) {
 <script type="text/javascript">
     $.bigfoot();
 </script>
-
