--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,7 +2,7 @@
   <li><a href="{{ root_url }}/"><i class="fa fa-home"></i> 首页</a></li>
   <li><a href="{{ root_url }}/blog/archives/"><i class="fa fa-list-ul"></i> 文章列表</a></li>
   <li><a href="{{ root_url }}/article-series/"><i class="fa fa-compass"></i> 系列文章</a></li>
-  <li><a href="{{ root_url }}/adn-timeline/"><i class="fa fa-flask"></i> 断章</a></li>
+  <!--<li><a href="{{ root_url }}/adn-timeline/"><i class="fa fa-flask"></i> 断章</a></li>-->
   <li><a href="{{ root_url }}/ebauche/"><i class="fa fa-gavel"></i> Ébauche</a></li>
   <li><a href="http://haohailong.net"><i class="fa fa-leaf"></i> 另一面</a></li>
 </ul>
